--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "vite preview"
+    "start": "npx vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -22,7 +22,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.10",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "vite": "^4.4.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
@@ -34,5 +35,9 @@
     "eslint-plugin-react-refresh": "^0.4.1",
     "prettier": "3.0.0",
     "vite": "^4.4.0"
+  },
+  "engines": {
+    "node": "16.15.1",
+    "npm": "9.6.7"
   }
 }
