--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "npx vite preview"
+    "start": "npx vite preview",
+    "postinstall": "npm install -g npm@latest"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
