--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "npx vite preview",
-    "postinstall": "npm install -g npm@latest"
+    "start": "npx vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -38,7 +37,6 @@
     "vite": "^4.4.0"
   },
   "engines": {
-    "node": "20.5.0",
-    "npm": "10.2.5"
+    "node": "20.5.0"
   }
 }
